# BayFAI

./: .gitignore  README.md  grid_search.sh  pyproject.toml  requirements.txt  submit.sh
bayfai/: fake_detector.py  geometry.py  optimization.py  plots.py  setup.py
benchmark/geom/mecl1048423/: 0-end_Q0.data  0-end_Q1.data  0-end_Q2.data  0-end_Q3.data
benchmark/geom/mfx100824024/: grid_search_score_mfx100824024_r0005.npz
benchmark/geom/mfx101080524/: 0-end.data
benchmark/geom/mfxl1008021/: 0-end.data
benchmark/geom/mfxl1038923/: 0-end_Rayonix.data
benchmark/geom/mfxl1045123/: 0-end.data
benchmark/geom/mfxx1017223/: 0-end.data
benchmark/geom/mfxx49820/: 0-end.data
benchmark/powder/: mecl1048423_Run0088.npy  mecl1048423_Run0089.npy  mecl1048423_Run0090.npy  mecl1048423_Run0170.npy  mecl1048423_Run0171.npy  mecl1048423_Run0172.npy
benchmark/yamls/cxi/: cxi101212425_11.yaml  cxi101212425_12.yaml  cxi101212425_13.yaml  cxil1015922_5.yaml  cxilu8823_10.yaml  cxilu8823_11.yaml  cxilu8823_12.yaml  cxilu8823_20.yaml  cxilu8823_21.yaml  cxilu8823_22.yaml  cxilu8823_7.yaml  cxilu8823_8.yaml  cxilu8823_9.yaml
benchmark/yamls/mec/: mecl1048423_170_Q0.yaml  mecl1048423_170_Q1.yaml  mecl1048423_170_Q2.yaml  mecl1048423_170_Q3.yaml  mecl1048423_171_Q0.yaml  mecl1048423_171_Q1.yaml  mecl1048423_171_Q2.yaml  mecl1048423_171_Q3.yaml  mecl1048423_172_Q0.yaml  mecl1048423_172_Q1.yaml  mecl1048423_172_Q2.yaml  mecl1048423_172_Q3.yaml  mecl1048423_88_Q0.yaml  (+11 more)
notebooks/: manual_calibration.ipynb
scripts/: bayfai.py  grid_search.py  push.py  run.py  run_benchmark.py
(+23 files in other folders)
